--- a/CTCI_Chapter1.ipynb
+++ b/CTCI_Chapter1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhMT7P6OBIOH3JvvMNGJx4",
+      "authorship_tag": "ABX9TyOlJPDu9ZkNN/rsG5Wmr+WV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,6 +61,25 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For the below implementation :\n",
+        "let len(keyValPairs)=N\n",
+        "Implemetation time : \n",
+        "for each of N pairs - \n",
+        "compute the hashcode for each key - O(1) and insert key-value pair at that location in the array - O(1)\n",
+        "Overall implementation complexity : O(1)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Retrival of a key value pair - reverse : compute the index from hashcode and retrive the key value pair from that index : o(1)"
+      ],
+      "metadata": {
+        "id": "7GJb9ljojTFK"
+      }
     },
     {
       "cell_type": "code",
