--- a/CTCI_Chapter1.ipynb
+++ b/CTCI_Chapter1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlJPDu9ZkNN/rsG5Wmr+WV",
+      "authorship_tag": "ABX9TyObrRPdKQMFFzYxN0bORDl/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -183,6 +183,41 @@
           "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implementation of array list with resizing factor 2"
+      ],
+      "metadata": {
+        "id": "h0hKgzmvlnF0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#user needs to be prompted to add/delete etc.\n",
+        "def insertIntoArrayList(elements):\n",
+        "  capacity_init=10\n",
+        "  init_size=0\n",
+        "  ret_list_init=torch.zeros([capacity_init],dtype='float')\n",
+        "  for i in range(len(elements)):\n",
+        "    if init_size==capacity_init:\n",
+        "      capacity_init=2*capacity_init\n",
+        "      ret_list_2=torch.zeros([capacity_init],dtype='float')\n",
+        "      for j in range(len(ret_list_init)):\n",
+        "        ret_list_2[j]=ret_list_init[j]\n",
+        "      ret_list_init=ret_list_2\n",
+        "      ret_list_init[i]=elements[i]\n",
+        "    else:\n",
+        "      ret_list_init[i]=elements[i]\n",
+        "      "
+      ],
+      "metadata": {
+        "id": "QNEluzjYluvb"
+      },
+      "execution_count": 40,
+      "outputs": []
     }
   ]
 }
